<resources>
    <string name="app_name">CustomerManagement</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">Email cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Postai cím</string>
    <string name="customer">Vevő</string>
    <string name="seller">Eladó</string>
    <string name="customer_description">Megrendelő leírása</string>
    <string name="loginGoogle">Bejelentkezés Google fiókkal</string>
    <string name="customer_placeholder">Vásárló neve</string>
    <string name="bought_item_name">Vásárolt termék</string>
    <string name="bought_item_price">Vásárolt termék összege</string>
    <string name="search">Keresés</string>
    <string name="logout">Kijelentkezés</string>
    <string name="settings">Beállítások</string>
    <string name="view">Nézet</string>
    <string name="none">-</string>
    <string name="deleteCustomer">Törlés</string>
    <string name="favourites">Kedvencek</string>
    <string name="addToFavourites">Kedvencekhez</string>
    <string name="payment_method">Fizetési metódus</string>
    <string-array name="phone_modes">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string-array name="customer_name">
        <item>Példa János</item>
        <item>Teller Kata</item>
        <item>Vass József</item>
        <item>Kiss Jenő</item>
        <item>Nagy Antal</item>
        <item>Hódi Ákos</item>
        <item>Majoros Gábor</item>
        <item>Bodó Helga</item>
        <item>Barata Endre</item>
        <item>Ézsiás Károly</item>
    </string-array>

    <string-array name="bought_item_name">
        <item>Számítógép</item>
        <item>Asztal</item>
        <item>Tábla</item>
        <item>Csoki</item>
        <item>Egér</item>
        <item>Szárítógép</item>
        <item>Törölköző</item>
        <item>Telefon</item>
        <item>Táska</item>
        <item>Kabát</item>
    </string-array>

    <string-array name="payment_method">
        <item>Készpénz</item>
        <item>Bitcoin</item>
        <item>Utalás</item>
        <item>Bankkártya</item>
        <item>Bankkártya</item>
        <item>Utalás</item>
        <item>Készpénz</item>
        <item>Készpénz</item>
        <item>Bitcoin</item>
        <item>Készpénz</item>
    </string-array>

    <array name="price">
        <item>60000 Dv</item>
        <item>2000 Dv</item>
        <item>5000 Dv</item>
        <item>70 Dv</item>
        <item>300 Dv</item>
        <item>30000 Dv</item>
        <item>1000 Dv</item>
        <item>15000 Dv</item>
        <item>800 Dv</item>
        <item>1500 Dv</item>
    </array>

    <array name="customer_image">
        <item>@drawable/kep0</item>
        <item>@drawable/kep1</item>
        <item>@drawable/kep2</item>
        <item>@drawable/kep3</item>
        <item>@drawable/kep4</item>
        <item>@drawable/kep5</item>
        <item>@drawable/kep6</item>
        <item>@drawable/kep7</item>
        <item>@drawable/kep8</item>
        <item>@drawable/kep9</item>
    </array>
</resources>